# api

./: .gitignore  .pre-commit-config.yaml  .vercelignore  Makefile  README.md  mkdocs.yaml  pyproject.toml  requirements.txt
.github/workflows/: docs.yaml  pre-commit.yaml  test.yaml
.streamlit/: config.toml
api/: __init__.py  index.py  inference.py  pyproject.toml
api/models/: __init__.py  api.py  utils.py
api/modules/predict/: __init__.py  numerology.py  tarot.py
api/modules/tarot_cards/: __init__.py  deck.py  draw_cards.py
api/prompts/: numerology.py  tarot.py
backend/: Makefile  pyproject.toml
backend/src/gptarot/: app.py  models.py
backend/src/gptarot/examples/: sample_rq_en.json  sample_rq_vi.json
backend/src/gptarot/predict_functions/: tarot.py
docs/: index.md  predict.md  tarot-cards.md
public/json/: 11.json  2.json  24.json  36.json  44.json  45.json  49.json  5.json  53.json  57.json  62.json  63.json  64.json  72.json  74.json  8.json
samples/: request.json  response.json
src/gptarot/: index.py  inference.py  llm.py
src/gptarot/functions/: __init__.py
src/gptarot/functions/predict/: __init__.py  numerology.py  tarot.py
src/gptarot/functions/tarot_cards/: __init__.py  draw.py
src/gptarot/models/: __init__.py  api.py  llm.py  tarot.py
src/gptarot/modules/: __init__.py
src/gptarot/modules/predict/: __init__.py  numerology.py  tarot.py
src/gptarot/modules/tarot_cards/: __init__.py  draw_cards.py
src/gptarot/prompts/: numerology.py  tarot.py
src/gptarot/public/static/card-info/: 1.json  10.json  11.json  (+69 more)
static/json/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+38 more)
