[project]
name = "gptarot-api"
version = "0.1.0"
description = "A GPT-powered tarot card reader API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.119.0",
    "instructor==1.11.3",
    "openai==1.109.1",
    "pydantic==2.12.3",
    "python-dotenv==1.1.1",
    "typing-extensions==4.15.0",
    "unidecode==1.4.0",
    "uvicorn==0.37.0",
]

[project.optional-dependencies]
docs = [
    "griffe-pydantic==1.1.8",
    "mkdocs-material==9.6.22",
    "mkdocs-minify-plugin==0.8.0",
    "mkdocstrings[python]==0.30.1",
]

[tool.ruff]
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "gradio>=5.23.1",
    "pre-commit==4.3.0",
    "ruff==0.14.1",
    "streamlit>=1.50.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gptarot"]

[tool.hatch.build.targets.sdist]
packages = ["src/gptarot"]

[tool.hatch.version]
path = "src/gptarot/__init__.py"

[tool.pycodestyle]
convention = "google"
