[project]
name = "gptarot-api"
version = "0.1.0"
description = "A GPT-powered tarot card reader API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.119.0",
    "openai==2.5.0",
    "pydantic==2.12.3",
    "python-dotenv>=1.1.1",
    "ruff>=0.14.1",
    "typing-extensions==4.15.0",
    "unidecode>=1.4.0",
    "uvicorn>=0.37.0",
]

[tool.ruff]
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gptarot"]

[tool.hatch.build.targets.sdist]
packages = ["src/gptarot"]

[tool.hatch.version]
path = "src/gptarot/__init__.py"

[tool.pycodestyle]
convention = "google"
